--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,9 @@ Temporary Items
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 .idea
 
+/node_modules
+package-lock.json
+
+
 
 
