--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "homepage": "https://github.com/gbox3d/elvis5#readme",
   "dependencies": {
     "nw": "^0.29.2"
+  },
+  "window": {
+    "width": 640,
+    "height": 480
   }
 }
