--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@babel/preset-env": "^7.16.11",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "fs-ext": "^2.0.0",
+    "fs-extra": "^10.0.1",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "http-server": "^0.11.1",
+    "http-server": "^14.1.0",
     "nodemon": "^2.0.15"
   }
 }
